[project]
name = "jira-for-alfred"
version = "2.10.1"
description = "An Alfred workflow for quickly searching for and opening Jira tickets."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
    "alfred-workflow-packager==3.2.0",
    "mypy==1.15.0",
    "ruff>=0.12.0",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]

# Mypy configuration
[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
